# impli

./: .gitignore  .swcrc  CHANGELOG.md  DISTRIBUTION.md  IMP.ebnf  LICENSE.md  README.md  build.ts  cabal.project  cabal.project.local  cabal.project.wasm  cabal.project.web  default.nix  deno.json  flake.nix  fourmolu.yaml  hie.yaml  imp.cabal  impli.cabal  js.nix  shell.nix
.github/: AGENTS.md
.github/workflows/: build.yml  ci.yaml  deploy-github-pages.yaml  deploy-wasm.yaml  deploy.yaml  distribute.yaml  format.yaml  release.yaml  test.yaml
aur/: PKGBUILD  README.md
docs/: IMP.ebnf
docs/examples/: countdown.imp  divmod.imp  factorial.imp  fibonacci.imp  gauss.imp  local.imp  nondeterminism.imp  parallel.imp  prime.imp  procedure.imp  turing.imp
docs/man/: impli.1
docs/paper/: definitions.typ  main.typ  meta.typ  natural.typ  structural.typ  variables.typ
examples/: countdown.imp  divmod.imp  factorial.imp  fibonacci.imp  gauss.imp  local.imp  nondeterminism.imp  parallel.imp  primes.imp  procedure.imp  turing.imp
exe/: CLI.hs  Config.hs  Main.hs  Meta.hs  Preset.hs  REPL.hs  StREPL.hs  Util.hs  WASM.hs  Wasm.hs  Web.hs
exe/REPL/: Execute.hs  Meta.hs  Preset.hs  State.hs  Util.hs  Web.hs
homebrew/: README.md
package/debian/: README.md  changelog  control  copyright  rules
package/homebrew/: impli.rb
package/nixpkgs/: README.md  default.nix
src/: CLI.hs  Config.hs  Main.hs  Rewrite.hs  TTY.hs  Util.hs  Web.hs
src/IMP/: CLI.hs  Config.hs  Errors.hs  Eval.hs  Exception.hs  Exec.hs  Expression.hs  Lexer.hs  Parser.hs  Pretty.hs  README.md  REPL.hs  Result.hs  Semantics.hs  State.hs  Statement.hs  Syntax.hs  TTY.hs  Util.hs
src/IMP/Parser/: Parses.hs  Util.hs
src/IMP/Semantic/: Expression.hs  Operational.hs  State.hs  Statement.hs  Structural.hs
src/IMP/Semantics/: Expression.hs  Natural.hs  Operational.hs  README.md  State.hs  Statement.hs  Structural.hs
src/IMP/Syntax/: Pretty.hs  Types.hs
src/IMP2/: Exception.hs  Expression.hs  Lexer.hs  Parser.hs  Pretty.hs  REPL.hs  State.hs  Statement.hs  Syntax.hs
src/IMP2/Semantic/: Expression.hs  Operational.hs  State.hs  Statement.hs  Structural.hs
src/REPL/: Execute.hs  Meta.hs  Preset.hs  README.md  State.hs  Web.hs
src/REPL/Execute/: Browser.hs  Native.hs  README.md
src/web/: README.md  impli.js  index.html  index.tsx  index2.html  main.js  setup.js  styles.css  sw.js  worker.js
test/: Spec.hs
web/: 404.html  App.tsx  IMPLEMENTATION_SUMMARY.md  README.md  REPL.js  WASM_BUILD.md  build-wasm.sh  build.sh  build.ts  deno.json  glue.js  impli.js  impli.ts  impli.wasm  index.html  main.js  script.js  setup.js  styles.css  sw.js  sw.ts  unsupported.html  util.ts  webify.sh  webterm.bundle.js
web.bak/: App.tsx  deno.json  index.tsx  unsupported.html  worker.js
web/lib/: ffi.js
web/src/: App.tsx  Main.hs  README.md  Unsupported.tsx  Web.hs  examples.js  examples.ts  ffi.js  ghc_wasm_jsffi.js  hack.js  hookup.js  impli.js  impli.ts  index.html  index.js  jsffi.js  main.js  main.ts  stdio.js  stdio.ts  styles.css  sw.js  sw.ts  term.js  util.ts  worker.ts
web/static/: examples.imp  impli.js  impli.wasm  index.html  main.js  mod.js  style.css  styles.css  sw.js
