cabal-version: 3.12
name: impli
version: 3.0.0.0
build-type: Simple
license: MIT
license-file: LICENSE.md
author: Basil Feitknecht
maintainer: bfeitknecht@ethz.ch
homepage: https://github.com/bfeitknecht/impli
bug-reports: https://github.com/bfeitknecht/impli/issues
category: Language
synopsis: Interpreter for an imperative toy language
description:
  Minimal imperative language interpreter built for educational purposes.

extra-doc-files:
  CHANGELOG.md
  IMP.ebnf
  README.md

extra-source-files:
  IMP.ebnf
  docs/examples/*.imp
  docs/man/impli.1

source-repository head
  type: git
  location: https://github.com/bfeitknecht/impli.git

common shared
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wextra

  build-depends:
    async >=2.2 && <2.3,
    base >=4.14 && <5,
    containers >=0.6 && <0.9,
    mtl >=2.2 && <3,
    parsec >=3.1 && <3.2,
    prettyprinter >=1.7 && <2,
    random >=1.1 && <1.3,
    transformers >=0.5 && <0.7,

common runnable
  hs-source-dirs: exe
  build-depends:
    ansi-terminal >=0.11 && <1.1,
    haskeline >=0.8 && <0.9,
    impli,
    optparse-applicative >=0.15 && <0.19,

  -- cabal gild: discover exe/** --exclude=**/Web.hs
  other-modules:
    CLI
    Paths_impli
    REPL.Execute
    REPL.Meta
    REPL.Preset
    REPL.Util

  autogen-modules:
    Paths_impli

library
  import: shared
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    IMP.Config
    IMP.Exception
    IMP.Expression
    IMP.Lexer
    IMP.Parser
    IMP.Pretty
    IMP.Semantics.Operational
    IMP.Semantics.Structural
    IMP.State
    IMP.Statement
    IMP.Syntax

executable impli
  import: shared, runnable
  main-is: Main.hs

executable impli-web
  import: shared, runnable
  main-is: Web.hs
  build-depends:
    impli,
    jsaddle >=0.9 && <0.10,

  js-sources:
    web/lib/ffi.js

  cpp-options:
    -DGHCJS_BROWSER

  ld-options:
    -Os
    -sEXPORT_ES6
    -sENVIRONMENT=web
    -sFORCE_FILESYSTEM
    -sASYNCIFY
    "--js-library=./web/lib/emscripten-pty.js"

test-suite impli-test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    impli,
    tasty >=1.4 && <1.5,
    tasty-hunit >=0.10 && <0.11,
