cabal-version: 3.12
name: impli
version: 4.0.0.0
build-type: Simple
license: MIT
license-file: LICENSE.md
author: Basil Feitknecht
maintainer: bfeitknecht@ethz.ch
homepage: https://github.com/bfeitknecht/impli
bug-reports: https://github.com/bfeitknecht/impli/issues
category: Language
synopsis: Interpreter for an imperative toy language
description:
  Minimal imperative language interpreter built for educational purposes.

extra-doc-files:
  CHANGELOG.md
  README.md
  docs/IMP.ebnf

extra-source-files:
  docs/IMP.ebnf
  docs/examples/*.imp
  docs/man/impli.1

source-repository head
  type: git
  location: https://github.com/bfeitknecht/impli.git

common dependencies
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wextra

  build-depends:
    async >=2.2 && <2.3,
    base >=4.14 && <5,
    containers >=0.6 && <0.9,
    mtl >=2.2 && <3,
    parsec >=3.1 && <3.2,
    prettyprinter >=1.7 && <2,
    random >=1.1 && <1.3,
    transformers >=0.5 && <0.7,

common shared
  -- cabal-gild: discover src --include=src/IMP/**
  other-modules:
    IMP.Config
    IMP.Exception
    IMP.Expression
    IMP.Lexer
    IMP.Parser
    IMP.Pretty
    IMP.Semantics.Operational
    IMP.Semantics.Structural
    IMP.State
    IMP.Statement
    IMP.Syntax

common native
  build-depends:
    ansi-terminal >=0.11 && <1.1,
    haskeline >=0.8 && <0.9,
    impli,
    optparse-applicative >=0.15 && <0.19,

  -- cabal-gild: discover src --include=src/REPL/** --include=src/CLI.hs --exclude=src/REPL/Execute/Browser.hs
  other-modules:
    CLI
    REPL.Execute.Native
    REPL.Meta
    REPL.Preset
    REPL.State

  autogen-modules:
    Paths_impli

common browser
  build-depends:
    impli

  -- cabal-gild: discover src --include=src/REPL/** --exclude=src/REPL/Execute/Native.hs
  other-modules:
    REPL.Execute.Browser
    REPL.Meta
    REPL.Preset
    REPL.State

library
  import: dependencies
  hs-source-dirs: src
  -- cabal-gild: discover src/ --include=src/IMP/**
  exposed-modules:
    IMP.Config
    IMP.Exception
    IMP.Expression
    IMP.Lexer
    IMP.Parser
    IMP.Pretty
    IMP.Semantics.Operational
    IMP.Semantics.Structural
    IMP.State
    IMP.Statement
    IMP.Syntax

executable impli
  import: dependencies, native, shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Paths_impli

executable impli-web
  import: dependencies, browser, shared
  hs-source-dirs: src
  main-is: Web.hs
  other-modules:
    Paths_impli

test-suite impli-test
  import: dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    impli,
    tasty >=1.4 && <1.5,
    tasty-hunit >=0.10 && <0.11,
